--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 {{#if posts.length}}
 <section>
   <h2>Your Posts</h2>
-    <ol>
+    <ol class="post-list">
       {{#each posts as |post|}}
       <li class="post">
         {{> post-info post}}
